# ncmec-sdk

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
ncmec_sdk/: __init__.py  client.py  models.py  repl.py
ncmec_sdk/tests/: test_client.py
